# serial2blehid_esp_idf

./: README.md
serial2blehid_bluedroid_tc101a/: README.md  sdkconfig  sdkconfig.old
serial2blehid_bluedroid_tc101a/main/: CMakeLists.txt  ble_hidd_demo_main.c  hid_device_le_prf.c  my_debug.h  my_hid_key_map.h  my_hid_key_map_jp.c  my_hid_key_map_us.c  my_if_uart.c  my_if_uart.h  my_ring_buffer.h
serial2blehid_nimble_button/: README.md
serial2blehid_nimble_button/main/: CMakeLists.txt  gpio_func.c  hid_func.c  main.c
serial2blehid_nimble_idf532/: README.md  sdkconfig  sdkconfig.old
serial2blehid_nimble_idf532/main/: gpio_func.c  main.c
serial2blehid_nimble_tc101a/: .editorconfig  .vimrc-local  README.md  sdkconfig
serial2blehid_nimble_tc101a/main/: CMakeLists.txt  ble_func.c  gatt_vars.c  hid_func.c  main.c  my_hid_key_map_jp.c  my_hid_key_map_us.c  my_if_uart.c  my_if_uart.h  my_ring_buffer.c  svc_dis.h
serial2blehid_nimble_wifi/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
serial2blehid_nimble_wifi/main/: CMakeLists.txt  Kconfig.projbuild  hid_codes.h  hid_func.c  hid_func.h  main.c  my_hid_key_map.h  my_httpd.c  my_httpd.h  my_if_uart.c  my_ring_buffer.c  my_softap.c  my_softap.h
